fix-frontend-gaps-for-main-page

--- a/styles/variables/_colors.scss
+++ b/styles/variables/_colors.scss
@@ -1,6 +1,6 @@
-$purple-design: #673ad0;
-$green-frontend: #09b65a;
-$blue-backend: #106fdc;
+$purple-design: #6C3FD5;
+$green-frontend: #09B65A;
+$blue-backend: #1574E1;
 $lemon-color: #D8FF4C;
 $text-gray: #F1F1ED;
 $background: #282828;
